{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "GameControls",
            "id": "aed9a827-f8ea-4225-9a4e-6711428b950f",
            "actions": [
                {
                    "name": "Touch",
                    "type": "Button",
                    "id": "fcbb7062-c7f5-42c9-b5aa-b8d6980f3eaa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "29e2c7f2-7004-42ab-bbef-201b4c6a5a63",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2a44a4a6-0054-4c50-bd8d-3be00b5923ca",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Touch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a4d9824a-af15-4c36-948b-efac58d6e4b4",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}